--- a/css/platformina.css
+++ b/css/platformina.css
@@ -346,26 +346,29 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   display: inline-block;
   color: #fff;
+  background: #000000;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  font-size: 13px;
+  font-size: 12px;
   text-transform: uppercase;
   outline: none;
 }
 
 .nav-menu li:hover > a, .nav-menu > .menu-active > a {
   color: #EB004E;
+  background: #000000;
 }
 
 .nav-menu > li {
-  margin-left: 10px;
+  margin-left: 4px;
+  background: #000000;
 }
 
 .nav-menu ul {
   margin: 4px 0 0 0;
-  padding: 10px;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  background: #fff;
+  padding: 12px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+  background: #000000;
 }
 
 .nav-menu ul li {
@@ -373,16 +376,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu ul li a {
-  padding: 10px;
+  padding: 12px;
   color: #333;
+  background: #000000;
   transition: 0.3s;
   display: block;
-  font-size: 13px;
+  font-size: 12px;
   text-transform: none;
 }
 
 .nav-menu ul li:hover > a {
   color: #EB004E;
+  background: #000000;
 }
 
 .nav-menu ul ul {
@@ -407,6 +412,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #mobile-nav-toggle i {
   color: #fff;
+  background: #000000;
 }
 
 @media (max-width: 768px) {
@@ -441,6 +447,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #mobile-nav ul li a {
   color: #fff;
+  background: #000000;
   font-size: 13px;
   text-transform: uppercase;
   overflow: hidden;
@@ -456,6 +463,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #mobile-nav ul li a:hover {
   color: #fff;
+  background: #000000;
 }
 
 #mobile-nav ul li li {
@@ -469,10 +477,12 @@ h1, h2, h3, h4, h5, h6 {
   padding: 15px;
   cursor: pointer;
   color: #fff;
+  background: #000000;
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
   color: #EB004E;
+  background: #000000;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -481,6 +491,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #mobile-nav ul .menu-item-active {
   color: #EB004E;
+  background: #000000;
 }
 
 #mobile-body-overly {
@@ -490,7 +501,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(0, 0, 0, 0.7);
+  background: #000000;
   display: none;
 }
 
@@ -505,6 +516,7 @@ body.mobile-nav-active #mobile-nav {
 
 body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
+  background: #000000;
 }
 
 /*--------------------------------------------------------------
